data/derived/comb/progs/unify/prog4433.ml.out
Characters 129-131:
  ((List.length l1) - 1, (mulByDigit (x*(int_of_float(m**10))) l2)::n) in
                                                         ^^
Error: This expression has type int but an expression was expected of type
         float
